ADD_CUSTOM_TARGET( examples )
INCLUDE_DIRECTORIES(include ${ROOT_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})

MACRO( ADD_PATHFINDER_EXAMPLE _name )
    ADD_EXECUTABLE( ${_name} ${ARGN} )
    TARGET_LINK_LIBRARIES( ${_name} ${PROJECT_NAME} ${ROOT_LIBS})
    INSTALL( TARGETS ${_name} DESTINATION bin )
ENDMACRO()

ADD_PATHFINDER_EXAMPLE( GBLpp GBLpp.cpp exampleUtil.cpp example1.cpp )
